manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "kghbot-37e3"
    labels:
        app: "kghbot-37e3"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "kghbot-37e3"
